tests/sumo/output/vtypeprobe/errors/freq_empty/errors.sumo
Warning: VTypeProbes are deprecated. Use fcd-output devices (assigned to the vType) instead.
Error: Attribute 'freq' in definition of vTypeProbe 'test1' is empty.
Quitting (on error).
